--- a/contact.html
+++ b/contact.html
@@ -10,10 +10,10 @@
   <body>
     <h1>Contact Me</h1>
     E-mail ID- himanshulalwani268@gmail.com
-    <a href="https://www.instagram.com/dumbbell_dore_/"><img src="images/ig.jpg" alt="Instagram" height="42" width="42"> </a>
-    <a href="https://www.facebook.com/himanshu.lalwani.54922"><img src="images/fb.jpg" alt="Facebook" height="42" width="42"> </a>
-    <a href="https://www.linkedin.com/in/himanshu-lalwani-1884481a2"><img src="images/in.jpg" alt="LinkedIn" height="42" width="42"> </a>
-    <a href="https://api.whatsapp.com/send?phone=919607389721&lang=en"><img src="images/wa.jpg" alt="Whatsapp" height="42" width="42"> </a>
+    <a href="https://www.instagram.com/dumbbell_dore_/"><img src="ig.jpg" alt="Instagram" height="42" width="42"> </a>
+    <a href="https://www.facebook.com/himanshu.lalwani.54922"><img src="fb.jpg" alt="Facebook" height="42" width="42"> </a>
+    <a href="https://www.linkedin.com/in/himanshu-lalwani-1884481a2"><img src="in.jpg" alt="LinkedIn" height="42" width="42"> </a>
+    <a href="https://api.whatsapp.com/send?phone=919607389721&lang=en"><img src="wa.jpg" alt="Whatsapp" height="42" width="42"> </a>
     <p><a href="home.html">Back</a> </p><hr>
     <h3>Fill this form below to contact me.</h3>
     <form action="mailto:himanshulalwani268@gmail.com" method="post" enctype="text/plain">
